--- a/pages/about.html
+++ b/pages/about.html
@@ -718,7 +718,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@IPness.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -742,8 +742,8 @@
                                 <div class="footer-widget__column footer-widget__about">
                                     <h3 class="footer-widget__title">About</h3>
                                     <div class="footer-widget__about-text-box">
-                                        <p class="footer-widget__about-text">Advancing the best talent, expertise and learning in technology.
-										We equip you with knowledge, credentials, education, and community to advance your career and transform your organization.</p>
+                                        <p class="footer-widget__about-text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
+										This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
                                     </div>
                                     <ul class="footer-widget__about-contact list-unstyled">
                                         <li>
@@ -759,7 +759,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">info@IPness.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -825,7 +825,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -863,7 +863,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">info@IPness.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
