--- a/pages/why-choose.html
+++ b/pages/why-choose.html
@@ -685,7 +685,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
