--- a/pages/about.html
+++ b/pages/about.html
@@ -92,11 +92,11 @@
                                     <ul>
                                         
                                         <li><a href="mobile-applications.html">Mobile Applications </a></li>
-                                        <li><a href="digital-marketing.html">Digital Marketings </a></li>
+                                        <li><a href="digital-marketing.html">Networking & Cloud Infrastructure </a></li>
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
                                         <li><a href="social-marketing.html">Social Marketings </a></li>
-                                        <li><a href="content-writing.html">Content Writtings </a></li>
+                                        <li><a href="content-writing.html">CyberSecurity </a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
