content correction and adjustment
changes

--- a/index.html
+++ b/index.html
@@ -713,91 +713,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO/Co Founder</p>
+                                    <p class="team-one__title">CEO & Co Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO/Co Founder</p>
-                                    <div class="team-one__social">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="#"><i class="fab fa-facebook"></i></a>
-                                        <a href="#"><i class="fab fa-instagram"></i></a>
-                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--Team One Single-->
-                            <div class="team-one__single">
-                                <div class="team-one__img">
-                                    <img src="assets/images/team/team-one-img-2.jpg" alt="">
-                                </div>
-                                <div class="team-one__content">
-                                    <h4 class="team-one__name">Perdita Oduro</h4>
-                                    <p class="team-one__title">Human Resourse</p>
-                                </div>
-                                <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Perdita Oduro</h4>
-                                    <p class="team-one__hover-title">Human Resourse</p>
-                                    <div class="team-one__social">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="#"><i class="fab fa-facebook"></i></a>
-                                        <a href="#"><i class="fab fa-instagram"></i></a>
-                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--Team One Single-->
-                            <div class="team-one__single">
-                                <div class="team-one__img">
-                                    <img src="assets/images/team/team-one-img-3.jpg" alt="">
-                                </div>
-                                <div class="team-one__content">
-                                    <h4 class="team-one__name">Rose ford</h4>
-                                    <p class="team-one__title">Designer</p>
-                                </div>
-                                <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Rose ford</h4>
-                                    <p class="team-one__hover-title">Designer</p>
-                                    <div class="team-one__social">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="#"><i class="fab fa-facebook"></i></a>
-                                        <a href="#"><i class="fab fa-instagram"></i></a>
-                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--Team One Single-->
-                            <div class="team-one__single">
-                                <div class="team-one__img">
-                                    <img src="assets/images/team/team-one-img-4.jpg" alt="">
-                                </div>
-                                <div class="team-one__content">
-                                    <h4 class="team-one__name">Armah Rockson</h4>
-                                    <p class="team-one__title">IP Network Engineer</p>
-                                </div>
-                                <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Armah Rockson</h4>
-                                    <p class="team-one__hover-title">IP Network Engineer</p>
-                                    <div class="team-one__social">
-                                        <a href="#"><i class="fab fa-twitter"></i></a>
-                                        <a href="#"><i class="fab fa-facebook"></i></a>
-                                        <a href="#"><i class="fab fa-instagram"></i></a>
-                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--Team One Single-->
-                            <div class="team-one__single">
-                                <div class="team-one__img">
-                                    <img src="assets/images/team/team-one-img-1.jpg" alt="">
-                                </div>
-                                <div class="team-one__content">
-                                    <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO/Co Founder</p>
-                                </div>
-                                <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO/Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Co Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -873,11 +793,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO/Co Founder</p>
+                                    <p class="team-one__title">CEO & Co Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO/Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Co Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -933,11 +853,91 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Armah Rockson</h4>
-                                    <p class="team-one__title">IP Network Engineer</p>
+                                    <p class="team-one__title">Lead IP Network Engineer</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Armah Rockson</h4>
-                                    <p class="team-one__hover-title">IP Network Engineer</p>
+                                    <p class="team-one__hover-title">Lead IP Network Engineer</p>
+                                    <div class="team-one__social">
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-facebook"></i></a>
+                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Team One Single-->
+                            <div class="team-one__single">
+                                <div class="team-one__img">
+                                    <img src="assets/images/team/team-one-img-1.jpg" alt="">
+                                </div>
+                                <div class="team-one__content">
+                                    <h4 class="team-one__name">Prince Sam</h4>
+                                    <p class="team-one__title">CEO & Co Founder</p>
+                                </div>
+                                <div class="team-one__hover">
+                                    <h4 class="team-one__hover-name">Prince Sam</h4>
+                                    <p class="team-one__hover-title">CEO & Co Founder</p>
+                                    <div class="team-one__social">
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-facebook"></i></a>
+                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Team One Single-->
+                            <div class="team-one__single">
+                                <div class="team-one__img">
+                                    <img src="assets/images/team/team-one-img-2.jpg" alt="">
+                                </div>
+                                <div class="team-one__content">
+                                    <h4 class="team-one__name">Perdita Oduro</h4>
+                                    <p class="team-one__title">Human Resourse</p>
+                                </div>
+                                <div class="team-one__hover">
+                                    <h4 class="team-one__hover-name">Perdita Oduro</h4>
+                                    <p class="team-one__hover-title">Human Resourse</p>
+                                    <div class="team-one__social">
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-facebook"></i></a>
+                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Team One Single-->
+                            <div class="team-one__single">
+                                <div class="team-one__img">
+                                    <img src="assets/images/team/team-one-img-3.jpg" alt="">
+                                </div>
+                                <div class="team-one__content">
+                                    <h4 class="team-one__name">Rose ford</h4>
+                                    <p class="team-one__title">Designer</p>
+                                </div>
+                                <div class="team-one__hover">
+                                    <h4 class="team-one__hover-name">Rose ford</h4>
+                                    <p class="team-one__hover-title">Designer</p>
+                                    <div class="team-one__social">
+                                        <a href="#"><i class="fab fa-twitter"></i></a>
+                                        <a href="#"><i class="fab fa-facebook"></i></a>
+                                        <a href="#"><i class="fab fa-instagram"></i></a>
+                                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Team One Single-->
+                            <div class="team-one__single">
+                                <div class="team-one__img">
+                                    <img src="assets/images/team/team-one-img-4.jpg" alt="">
+                                </div>
+                                <div class="team-one__content">
+                                    <h4 class="team-one__name">Armah Rockson</h4>
+                                    <p class="team-one__title">Lead IP Network Engineer</p>
+                                </div>
+                                <div class="team-one__hover">
+                                    <h4 class="team-one__hover-name">Armah Rockson</h4>
+                                    <p class="team-one__hover-title">Lead IP Network Engineer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
