--- a/pages/website-development.html
+++ b/pages/website-development.html
@@ -226,10 +226,12 @@
 							</div>
 							<div class="service-details__content">
 								<h2 class="service-details__title">We are the leading and most trustable web development company specializing in Custom Web Development services. 
-								Our expertise and experience in developing web-based solutions will revolutionize your business, thereby establishing your brand identity.</p>
-								<p class="service-details__text-2">Lorem ipsum is simply free text dolor sit amet,
-									consectetur notted adipisicing elit sed do eiusmod tempor incididunt ut labo lonm
-									andhn.</p>
+								Our expertise and experience in developing web-based solutions will revolutionize your business, thereby establishing your brand identity.
+</p>
+								<p class="service-details__text-2">Transform your web design vision into reality with IPness – 
+the best web design company in Africa. Our innovative custom design services will help your business stand out in the crowded online marketplace.
+ Our feature-rich, search engine-friendly designs are tailored to appeal to your target audience
+</p>
 								<p class="service-details__text-3">Tincidunt elit magnis nulla facilisis sagittis sapien
 									nunc Many desktop publishing packages and web page editors amet ultrices dolores sit
 									ipsum velit purus aliquet massa fringilla leo orci. Sapien nunc amet ultrices.</p>
@@ -240,24 +242,23 @@
 										<div class="service-details__bottom-icon">
 											<span class="icon-front-end"></span>
 											<h4 class="service-details__bottom-title">content & Structure</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text">We Organize your content in a hierarchical structure,
+											with important information and calls to action placed prominently.</p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-investigation"></span>
 											<h4 class="service-details__bottom-title">Analysis & Planning</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text">We Create a content plan that outlines what information you want to include on your website.</p>
 										</div>
 									</li>
 									<li class="service-details__bottom-single">
 										<div class="service-details__bottom-icon">
 											<span class="icon-increment"></span>
 											<h4 class="service-details__bottom-title">Solutions & Findings</h4>
-											<p class="service-details__bottom-text">Duis aute irure dolor in repreh
-												enderit nulla voluptate velit.</p>
+											<p class="service-details__bottom-text">With the increasing use of mobile devices,
+											responsive web design has become a standard solution to ensure that websites adapt and display well on different screen sizes and devices.</p>
 										</div>
 									</li>
 								</ul>
@@ -267,15 +268,15 @@
 									<div class="col-xl-6">
 										<div class="service-details__benefits-content">
 											<h3 class="service-details__benefits-title">Our Benefits</h3>
-											<p class="service-details__benefits-text">Duis aute irure dolor in simply
-												free text exist on reprehende voluptate velit esse cillum.</p>
+											<p class="service-details__benefits-text"> A website can be an effective tool for engaging with customers. Interactive features such as contact forms,
+											live chat, and social media integration can enable customers to connect with the company, ask questions, and seek information. This can lead to improved customer engagement, relationship building, and increased customer loyalty.</p>
 											<ul class="list-unstyled service-details__benefits-list">
 												<li>
 													<div class="icon">
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Nsectetur cing elit</p>
+														<p>Enhanced online presence</p>
 													</div>
 												</li>
 												<li>
@@ -283,7 +284,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Suspe ndisse suscip sagittis leo</p>
+														<p>Increased credibility and professionalism</p>
 													</div>
 												</li>
 												<li>
@@ -291,7 +292,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>Entum estib dignissim posuere</p>
+														<p>Improved customer engagement</p>
 													</div>
 												</li>
 												<li>
@@ -299,7 +300,7 @@
 														<span class="icon-draw-check-mark"></span>
 													</div>
 													<div class="text">
-														<p>If you are going to use a pass</p>
+														<p>Greater control over branding</p>
 													</div>
 												</li>
 											</ul>
