--- a/pages/website-development.html
+++ b/pages/website-development.html
@@ -257,8 +257,8 @@ the best web design company in Africa. Our innovative custom design services wil
 										<div class="service-details__bottom-icon">
 											<span class="icon-increment"></span>
 											<h4 class="service-details__bottom-title">Solutions & Findings</h4>
-											<p class="service-details__bottom-text">With the increasing use of mobile devices,
-											responsive web design has become a standard solution to ensure that websites adapt and display well on different screen sizes and devices.</p>
+											<p class="service-details__bottom-text">A website can be an effective tool for engaging with customers.
+											Interactive features such as contact forms, live chat.</p>
 										</div>
 									</li>
 								</ul>
