--- a/pages/content-writing.html
+++ b/pages/content-writing.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Content Writtings || Service Details || IPness || IPness HTML Template For Business</title>
+	<title>CyberSecurity || Service Details || IPness || IPness HTML Template For Business</title>
 	<!-- favicons Icons -->
 	<link rel="apple-touch-icon" sizes="180x180" href="../assets/images/favicons/apple-touch-icon.png" />
 	<link rel="icon" type="image/png" sizes="32x32" href="../assets/images/favicons/favicon-32x32.png" />
@@ -98,7 +98,7 @@
 										<li><a href="graphic-design.html">Graphic Designing </a></li>
 										<li><a href="website-development.html">Website Developments </a></li>
 										<li><a href="social-marketing.html">Social Marketings </a></li>
-										<li><a href="content-writing.html">Content Writings </a></li>
+										<li><a href="content-writing.html">CyberSecurity </a></li>
 									</ul>
 								</li>
 								<li class="dropdown">
@@ -197,7 +197,7 @@
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="social-marketing.html">Social Marketings <span
 												class="icon-right-arrow"></span></a></li>
-									<li><a href="content-writing.html">Content Writtings <span
+									<li><a href="content-writing.html">CyberSecurity <span
 												class="icon-right-arrow"></span></a></li>
 								</ul>
 							</div>
@@ -379,7 +379,7 @@
 							</div>
 							<div class="site-footer__top-title-box">
 								<h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-										href="mailto:info@example.com">info@example.com</a></h3>
+										href="mailto:info@example.com">info@ipness-one.com</a></h3>
 							</div>
 						</div>
 						<div class="site-footer__top-right">
@@ -403,8 +403,8 @@
 								<div class="footer-widget__column footer-widget__about">
 									<h3 class="footer-widget__title">About</h3>
 									<div class="footer-widget__about-text-box">
-										<p class="footer-widget__about-text">Lorem ipsum dolor sit amet, consect etur
-											adi pisicing elit sed do eiusmod.</p>
+										<p class="footer-widget__about-text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
+										This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.</p>
 									</div>
 									<ul class="footer-widget__about-contact list-unstyled">
 										<li>
@@ -420,7 +420,7 @@
 												<i class="fas fa-envelope"></i>
 											</div>
 											<div class="text">
-												<a href="mailto:needhelp@company.com">needhelp@company.com</a>
+												<a href="mailto:needhelp@company.com">info@ipness-one.com</a>
 											</div>
 										</li>
 										<li>
@@ -428,7 +428,8 @@
 												<i class="fas fa-map-marker-alt"></i>
 											</div>
 											<div class="text">
-												<p>66 Broklyn Street New York, USA</p>
+												<p>Mankessim station roundAbout C/R
+												 Kumasi station A/R Africa</p>
 											</div>
 										</li>
 									</ul>
@@ -485,7 +486,7 @@
 								<div class="site-footer__bottom-inner">
 									<div class="site-footer__bottom-left">
 										<p class="site-footer__bottom-text">© Copyrights, 2021 <a
-												href="#">BracketWeb</a></p>
+												href="#">IPness Ltd.</a></p>
 									</div>
 									<div class="site-footer__bottom-right">
 										<ul class="list-unstyled site-footer__bottom-menu">
@@ -523,7 +524,7 @@
 			<ul class="mobile-nav__contact list-unstyled">
 				<li>
 					<i class="fa fa-envelope"></i>
-					<a href="mailto:needhelp@packageName__.com">needhelp@qutiiz.com</a>
+					<a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
 				</li>
 				<li>
 					<i class="fa fa-phone-alt"></i>
