--- a/pages/why-choose.html
+++ b/pages/why-choose.html
@@ -554,8 +554,8 @@
                     <div class="col-xl-12">
                         <div class="cta-one__inner wow fadeInUp" data-wow-delay="100ms" data-wow-duration="2500ms">
                             <div class="cta-one__left">
-                                <h2 class="cta-one__title">the passion trying & skill can make <br> a top-performing
-                                    company</h2>
+                                <h2 class="cta-one__title">Think big. We make it,<br> possible!
+                                   </h2>
                             </div>
                             <div class="cta-one__right">
                                 <a href="contact.html" class="cta-one__btn thm-btn">let’s get started</a>
@@ -578,7 +578,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@ipness.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness-one.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -619,7 +619,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">info@ipness.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness-one.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -723,7 +723,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">info@ipness.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
