--- a/pages/services2.html
+++ b/pages/services2.html
@@ -97,7 +97,7 @@
                                         <li><a href="graphic-design.html">Graphic Designing </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
                                         <li><a href="social-marketing.html">Social Marketings </a></li>
-                                        <li><a href="content-writing.html">Content Writing  </a></li>
+                                        <li><a href="content-writing.html">CyberSecurity </a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
@@ -138,7 +138,7 @@
                             </div>
                             <div class="main-menu-wrapper__call-number">
                                 <p>Call Anytime</p>
-                                <h5><a href="tel:926668880000">92 666 888 0000</a></h5>
+                                <h5><a href="tel:926668880000">+1 689 267 3697</a></h5>
                             </div>
                         </div>
                     </div>
@@ -331,8 +331,8 @@
                             <div class="cta-one-shape-2"></div>
                             <div class="cta-one-shape-3"></div>
                             <div class="cta-one__left">
-                                <h2 class="cta-one__title">the passion trying & skill can make <br> a top-performing
-                                    company</h2>
+                                <h2 class="cta-one__title">we are dedicated to <br> serve you all time
+                                   </h2>
                             </div>
                             <div class="cta-one__right">
                                 <a href="contact.html" class="cta-one__btn thm-btn">let’s get started</a>
@@ -356,7 +356,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@ipness.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness-one.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -397,7 +397,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">info@ipness.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness-one.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -463,7 +463,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -501,7 +501,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">info@ipness.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
