--- a/pages/team-details.html
+++ b/pages/team-details.html
@@ -396,7 +396,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@ipness.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness-one.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -437,7 +437,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">info@ipness.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness-one.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -503,7 +503,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -541,7 +541,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">info@ipness.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
