--- a/pages/team.html
+++ b/pages/team.html
@@ -189,11 +189,11 @@
                             </div>
                             <div class="team-one__content">
                                 <h4 class="team-one__name">Prince Sam</h4>
-                                <p class="team-one__title">CEO/Co Founder</p>
+                                <p class="team-one__title">CEO & Co Founder</p>
                             </div>
                             <div class="team-one__hover">
                                 <h4 class="team-one__hover-name">Prince Sam</h4>
-                                <p class="team-one__hover-title">CEO/Co Founder</p>
+                                <p class="team-one__hover-title">CEO & Co Founder</p>
                                 <div class="team-one__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-facebook"></i></a>
@@ -298,11 +298,11 @@
                                 <img src="../assets/images/team/team-page-6.jpg" alt="">
                             </div>
                             <div class="team-one__content">
-                                <h4 class="team-one__name">david cooper</h4>
+                                <h4 class="team-one__name">David cooper</h4>
                                 <p class="team-one__title">Web Developer</p>
                             </div>
                             <div class="team-one__hover">
-                                <h4 class="team-one__hover-name">david cooper</h4>
+                                <h4 class="team-one__hover-name">David cooper</h4>
                                 <p class="team-one__hover-title">Web Developer</p>
                                 <div class="team-one__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -328,7 +328,7 @@
                             <div class="cta-one-shape-2"></div>
                             <div class="cta-one-shape-3"></div>
                             <div class="cta-one__left">
-                                <h2 class="cta-one__title">the passion trying & skill can make <br> a top-performing
+                                <h2 class="cta-one__title">choose the best it<br> service
                                     company</h2>
                             </div>
                             <div class="cta-one__right">
@@ -352,7 +352,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@ipness.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness-one.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -393,7 +393,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">info@ipness.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness-one.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -459,7 +459,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -497,7 +497,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">info@ipness.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
