--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -395,7 +395,7 @@
                             </div>
                             <div class="site-footer__top-title-box">
                                 <h3 class="site-footer__top-title">Let's work together just drop me a line - <a
-                                        href="mailto:info@example.com">info@ipness.com</a></h3>
+                                        href="mailto:info@example.com">info@ipness-one.com</a></h3>
                             </div>
                         </div>
                         <div class="site-footer__top-right">
@@ -436,7 +436,7 @@
                                                 <i class="fas fa-envelope"></i>
                                             </div>
                                             <div class="text">
-                                                <a href="mailto:needhelp@company.com">info@ipness.com</a>
+                                                <a href="mailto:needhelp@company.com">info@ipness-one.com</a>
                                             </div>
                                         </li>
                                         <li>
@@ -502,7 +502,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -540,7 +540,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">info@ipness.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
