--- a/pages/team.html
+++ b/pages/team.html
@@ -255,11 +255,11 @@
                             </div>
                             <div class="team-one__content">
                                 <h4 class="team-one__name">Armah Rockson</h4>
-                                <p class="team-one__title">IP Network Engineer</p>
+                                <p class="team-one__title">Lead IP Network Engineer</p>
                             </div>
                             <div class="team-one__hover">
                                 <h4 class="team-one__hover-name">Armah Rockson</h4>
-                                <p class="team-one__hover-title">IP Network Engineer</p>
+                                <p class="team-one__hover-title">Lead IP Network Engineer</p>
                                 <div class="team-one__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-facebook"></i></a>
