--- a/pages/about.html
+++ b/pages/about.html
@@ -186,7 +186,7 @@
                                 <img src="../assets/images/resources/about-page-img.jpg" alt="">
                             </div>
                             <div class="about-page__founded">
-                                <h5>Founded <br> in 2015</h5>
+                                <h5>Founded <br> in 2020</h5>
                             </div>
                         </div>
                     </div>
@@ -327,11 +327,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO/Co Founder</p>
+                                    <p class="team-one__title">CEO & Co Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO/Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Co Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -387,11 +387,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Armah Rockson</h4>
-                                    <p class="team-one__title">IP Network Engineer</p>
+                                    <p class="team-one__title">Lead IP Network Engineer</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Armah Rockson</h4>
-                                    <p class="team-one__hover-title">IP Network Engineer</p>
+                                    <p class="team-one__hover-title">Lead IP Network Engineer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -407,11 +407,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO/Co Founder</p>
+                                    <p class="team-one__title">CEO & Co Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Sam</h4>
-                                    <p class="team-one__hover-title">CEO/Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Co Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -467,11 +467,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Armah Rockson</h4>
-                                    <p class="team-one__title">IP Network Engineer</p>
+                                    <p class="team-one__title">Lead IP Network Engineer</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Armah Rockson</h4>
-                                    <p class="team-one__hover-title">IP Network Engineer</p>
+                                    <p class="team-one__hover-title">Lead IP Network Engineer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -487,11 +487,11 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Prince Sam</h4>
-                                    <p class="team-one__title">CEO/Co Founder</p>
+                                    <p class="team-one__title">CEO & Co Founder</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Prince Samy</h4>
-                                    <p class="team-one__hover-title">CEO/Co Founder</p>
+                                    <p class="team-one__hover-title">CEO & Co Founder</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -547,7 +547,7 @@
                                 </div>
                                 <div class="team-one__content">
                                     <h4 class="team-one__name">Armah Rockson</h4>
-                                    <p class="team-one__title">IP Network Engineer</p>
+                                    <p class="team-one__title">Lead IP Network Engineer</p>
                                 </div>
                                 <div class="team-one__hover">
                                     <h4 class="team-one__hover-name">Armah Rockson</h4>
@@ -767,8 +767,8 @@
                                                 <i class="fas fa-map-marker-alt"></i>
                                             </div>
                                             <div class="text">
-                                                <p>Ghana, Mankessim roundabout &
-												Kumasi station yellow building 2nd floor</p>
+                                                <p>Mankessim station roundAbout C/R
+												 Kumasi station A/R Africa</p>
                                             </div>
                                         </li>
                                     </ul>
