Update-on linking pages and removing the shop page

--- a/index.html
+++ b/index.html
@@ -77,52 +77,44 @@
                                 <li class="dropdown">
                                     <a href="#">Menu</a>
                                     <ul>
-                                        <li><a href="about.html">About</a></li>
-                                        <li><a href="team.html">Team</a></li>
-                                        <li><a href="team-details.html">Team Details</a></li>
-                                        <li><a href="testimonials.html">Testimonials</a></li>
-                                        <li><a href="why-choose.html">Why Choose</a></li>
-                                        <li><a href="faq.html">FAQs</a></li>
+                                        <li><a href="./pages/about.html">About</a></li>
+                                        <li><a href="./pages/team.html">Team</a></li>
+                                        <li><a href="./pages/team-details.html">Team Details</a></li>
+                                        <li><a href="./pages/testimonials.html">Testimonials</a></li>
+                                        <li><a href="./pages/why-choose.html">Why Choose</a></li>
+                                        <li><a href="./pages/faq.html">FAQs</a></li>
                                         
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#">Services</a>
                                     <ul>
-                                        <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">Mobile Applications</a></li>
-                                        <li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
-                                        <li><a href="graphic-design.html">Graphic Designing</a></li>
-                                        <li><a href="website-development.html">Website Developments</a></li>
-                                        <li><a href="social-marketing.html">Social Marketings</a></li>
-                                        <li><a href="content-writing.html">CyberSecurity</a></li>
+                                        <li><a href="./pages/services2.html">Services</a></li>
+                                        <li><a href="./pages/mobile-applications.html">Mobile Applications</a></li>
+                                        <li><a href="./pages/digital-marketing.html">Networking & Cloud Infrastructure</a></li>
+                                        <li><a href="./pages/graphic-design.html">Graphic Designing</a></li>
+                                        <li><a href="./pages/website-development.html">Website Developments</a></li>
+                                        <li><a href="./pages/social-marketing.html">Social Marketings</a></li>
+                                        <li><a href="./pages/cyberSecurity.html">CyberSecurity</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
                                     <a href="#">Projects</a>
                                     <ul>
-                                        <li><a href="project.html">Projects</a></li>
-                                        <li><a href="project-details.html">Project Details</a></li>
+                                        <li><a href="./pages/project.html">Projects</a></li>
+                                        <li><a href="./pages/project-details.html">Project Details</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown">
-                                    <a href="#">Shop</a>
-                                    <ul>
-                                        <li><a href="products.html">Products</a></li>
-                                        <li><a href="product-details.html">Product Details </a></li>
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                    </ul>
-                                </li>
+                                 
                                 <li class="dropdown">
                                     <a href="#">Blog</a>
                                     <ul>
-                                        <li><a href="blog.html">Blog Posts</a></li>
-                                        <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
+                                        <li><a href="./pages/blog.html">Blog Posts</a></li>
+                                        <li><a href="./pages/blog-sidebar.html">Blog Sidebar</a></li>
+                                        <li><a href="./pages/blog-details.html">Blog Details</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="./pages/contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
