--- a/pages/social-marketing.html
+++ b/pages/social-marketing.html
@@ -98,7 +98,7 @@
 										<li><a href="graphic-design.html">Graphic Designing </a></li>
 										<li><a href="website-development.html">Website Developments </a></li>
 										<li><a href="social-marketing.html">Social Marketings </a></li>
-										<li><a href="content-writing.html">CyberSecurity</a></li>
+										<li><a href="cyberSecurity.html">CyberSecurity</a></li>
 									</ul>
 								</li>
 								<li class="dropdown">
@@ -108,15 +108,7 @@
 										<li><a href="project-details.html">Project Details</a></li>
 									</ul>
 								</li>
-								<li class="dropdown">
-									<a href="#">Shop</a>
-									<ul>
-										<li><a href="products.html">Products</a></li>
-										<li><a href="product-details.html">Product Details </a></li>
-										<li><a href="cart.html">Cart</a></li>
-										<li><a href="checkout.html">Checkout</a></li>
-									</ul>
-								</li>
+								 
 								<li class="dropdown">
 									<a href="#">Blog</a>
 									<ul>
@@ -197,7 +189,7 @@
 												class="icon-right-arrow"></span></a></li>
 									<li><a href="social-marketing.html">Social Marketings <span
 												class="icon-right-arrow"></span></a></li>
-									<li><a href="content-writing.html">CyberSecurity <span
+									<li><a href="cyberSecurity.html">CyberSecurity <span
 												class="icon-right-arrow"></span></a></li>
 								</ul>
 							</div>
