--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -98,7 +98,7 @@
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
                                         <li><a href="website-development.html">Website Developments </a></li>
                                         <li><a href="social-marketing.html">Social Marketings </a></li>
-                                        <li><a href="content-writing.html">Content Writtings </a></li>
+                                        <li><a href="cyberSecurity.html">CyberSecurity </a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown">
@@ -108,15 +108,7 @@
                                         <li><a href="project-details.html">Project Details</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown current">
-                                    <a href="#">Shop</a>
-                                    <ul>
-                                        <li><a href="products.html">Products</a></li>
-                                        <li><a href="product-details.html">Product Details </a></li>
-                                        <li><a href="cart.html">Cart</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
-                                    </ul>
-                                </li>
+                                 
                                 <li class="dropdown">
                                     <a href="#">Blog</a>
                                     <ul>
