--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                     <a href="#">Services</a>
                                     <ul>
                                         <li><a href="services2.html">Services</a></li>
-                                        <li><a href="mobile-applications.html">Mobile Applications</a></li>
+                                        <li><a href="mobile-applications.html">IoTs</a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="graphic-design.html">Graphic Designing</a></li>
                                         <li><a href="website-development.html">Website Developments</a></li>
@@ -482,10 +482,10 @@
                     <div class="col-xl-12">
                         <ul class="project-filter style1 post-filter has-dynamic-filters-counter list-unstyled">
                             <li data-filter=".filter-item" class="active"><span class="filter-text">All</span></li>
-                            <li data-filter=".bra"><span class="filter-text">Branding</span></li>
-                            <li data-filter=".photo"><span class="filter-text">Photography</span></li>
+                            <li data-filter=".bra"><span class="filter-text">Network</span></li>
+                            <li data-filter=".photo"><span class="filter-text">Cloud Infrastructure</span></li>
                             <li data-filter=".web"><span class="filter-text">Web Design</span></li>
-                            <li data-filter=".app"><span class="filter-text last-pd-none">Apps</span></li>
+                            <li data-filter=".app"><span class="filter-text last-pd-none">IoTs</span></li>
                         </ul>
                     </div>
                 </div>
